--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <title>Keep App</title>
-    <link font-family: "Montserrat", sans-serif;
-    href="https://fonts.googleapis.com/css?family=McLaren%7cMontserrat&display=swap"
-    rel="stylesheet" />
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'/>
     <link rel="stylesheet" href="styles.css" />
   	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" media="all">
 </head>
@@ -15,4 +13,3 @@
   </body>
 </html>
 
-<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
